infra/k8s/services/observability-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: observability-svc
  namespace: default
spec:
  selector:
    app: observability
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
  sessionAffinity: None
  clusterIP: None
