infra/k8s/services/tools-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tools-svc
  namespace: default
spec:
  selector:
    app: tools
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
  sessionAffinity: None
